--- a/src/App.scss
+++ b/src/App.scss
@@ -46,15 +46,15 @@
 }
 
 .loader{
-  background-color: #fff;
   position: absolute;
   z-index: 10;
   min-height: 100vh;
-  top: 0;
   width: 100%;
-  left: 0;
   opacity: 0.7;
+  right: 0;
+  margin: auto;
   &:before{
+    background-color: #fff;
     content: '';
     position: fixed;
     width: 100%;
